@@ -13,7 +13,7 @@ volScalarField sourceTerm
         IOobject::AUTO_WRITE
     ),
     mesh,
-    dimensionedScalar("",dimVol/dimTime,0)
+    dimensionedScalar("",dimless/dimTime,0)
 );
 
 //- determining cell id corresponding to datas
@@ -21,10 +21,10 @@ labelList idCoordinates(event.ncoordinates());
 label currentEvent = 0;
 if (eventIsPresent)
 {
-    sourceTerm = dimensionedScalar("",dimVol/dimTime,0);
+    sourceTerm = dimensionedScalar("",dimless/dimTime,0);
     forAll(event.coordinates(),pointi)
     {
         idCoordinates[pointi] = mesh.findNearestCell(event.coordinates()[pointi]);
-        sourceTerm[idCoordinates[pointi]] = event.datas()[currentEvent][pointi];
+        sourceTerm[idCoordinates[pointi]] = event.datas()[currentEvent][pointi]/mesh.V()[idCoordinates[pointi]];
     }
 }
