@@ -5,11 +5,11 @@ if (eventIsPresent)
         if (runTime.timeOutputValue() > event.dates()[currentEvent+1])
         {
             currentEvent++;
-            sourceTerm = dimensionedScalar("",dimLength/dimTime,0);
+            sourceTerm = dimensionedScalar("",dimless/dimTime,0);
             forAll(event.coordinates(),pointi)
             {
                 Info << idCoordinates[pointi] << endl;
-                sourceTerm[idCoordinates[pointi]] = event.datas()[currentEvent][pointi];
+                sourceTerm[idCoordinates[pointi]] = event.datas()[currentEvent][pointi]/mesh.V()[idCoordinates[pointi]];
             }
         }
     }
